Index page view gap fix

--- a/app/assets/stylesheets/application/modules/card.scss
+++ b/app/assets/stylesheets/application/modules/card.scss
@@ -18,10 +18,6 @@ body.my-companies-index {
     > header {
       height: 200px;
 
-      .tagline {
-        margin-top: 8px;
-      }
-
       h3 {
         font-family: $font-heading;
         letter-spacing: 1.5px;
